# ormedian-utils

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ormedian_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py
src/file_utils/: __init__.py  move_spec_files.py  resize_imgs.py  save_frames.py  video_folder.py
src/ormedian_utils/: __init__.py  logger_config.py  move_spec_files.py  resize_folders.py  resize_imgs.py  save_frames.py  video_folder.py
tests/: test_utils.py
tests/testImages/: 10.json  100.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  48.json  49.json  5.json  50.json  51.json  52.json  53.json  (+53 more)
