[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
dependencies =["Pillow >= 8.4.0", "opencv-contrib-python", "matplotlib", "tqdm >= 4.59.0"]

name = 'ormedian_utils'
version = '0.0.8'
authors = [{name ='Samuel Adebayo', email = 'samuel@ormedian.com'}]
license = {file ='LICENSE'}
requires-python = '>=3.6'

classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python",
"Programming Language :: Python :: 3"]

keywords = ['python', 'file', 'deep learning', 'image transformation', 'utilities', 'quality', 'jpeg', 'png', 'image reduce']

[project.urls]
'Homepage' = 'https://github.com/exponentialR/ormedian-utils'
