[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'ormedian_utils'
version = '0.1'
authors = [
    {name='Samuel Adebayo', email='samueladebayo@ieee.org'},
]
description = 'Utilities for Computer Vision Tasks'
readme = 'README.md'
license = {file='LICENSE'}
requires-python = '<=3.8.9'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "opencv-python==4.5.4.58", "colorama", "Pillow", "tqdm"
]

[project.urls]
'Homepage' = 'https://github.com/exponentialR/ormedian-utils'
'Bug Tracker' = 'https://github.com/exponentialR/ormedian-utils/issues'